# tefi-oracle-contracts

contracts/oracle-proxy-nsn-mock/: Cargo.toml  README.md
contracts/oracle-proxy-nsn-mock/src/: contract.rs  msg.rs  state.rs
contracts/oracle-proxy-template-nsn-mock/src/: state.rs
